[gd_scene load_steps=4 format=3 uid="uid://d1jkpranavryx"]

[ext_resource type="Theme" uid="uid://qry22usrno8o" path="res://resources/menu_theme.tres" id="1_bl585"]
[ext_resource type="Script" uid="uid://f08gndelqmp3" path="res://scripts/UI/pause_menu.gd" id="1_xs5un"]
[ext_resource type="AudioStream" uid="uid://b7ed7kntt84y0" path="res://resources/blipSelect.wav" id="3_mko1u"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_bl585")
script = ExtResource("1_xs5un")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -50.5
offset_right = 96.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "--Pause Menu--"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Restart")
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../MainMenu")
text = "Restart"

[node name="MainMenu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Restart")
focus_neighbor_bottom = NodePath("../Quit")
text = "Main Menu"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../Resume")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mko1u")
volume_db = -20.0

[connection signal="focus_entered" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
